chore: 🤖 add dvc s3 path

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,2 @@
-[core]
-    remote = legal-charts-data
-['remote "legal-charts-data"']
-    url = gs://legal-charts-data
+['remote "legal-charts-s3"']
+    url = s3://legal-charts-data
